ap-router/etc/iptables/iptables.rules
# Generated by iptables-save v1.6.0 on Sun Mar 19 11:00:15 2017
# TODO: firewall
#######################
#       filter        #
#######################
*filter
:INPUT ACCEPT [498:240356]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [491:227609]
#DHCP
-A INPUT -p udp -m udp --dport 67   -j ACCEPT
#DNS
-A INPUT -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5353 -j ACCEPT
#forwarding
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 10.0.0.0/24 -i tun0 -j ACCEPT
-A FORWARD -d 10.0.0.0/24 -i eno1 -j ACCEPT
-A FORWARD -s 10.0.0.0/24 -i br0  -j ACCEPT
#laptop
-A FORWARD -p tcp -d 10.0.0.3 --dport 50100:50199 -j ACCEPT
-A FORWARD -p udp -d 10.0.0.3 --dport 50100:50199 -j ACCEPT
-A FORWARD -p tcp -s 10.0.0.3 --dport 50100:50199 -j ACCEPT
-A FORWARD -p udp -s 10.0.0.3 --dport 50100:50199 -j ACCEPT
COMMIT
##################### 
#        nat        #
#####################
*nat
:PREROUTING ACCEPT [460:40962]
:INPUT ACCEPT [163:23425]
:OUTPUT ACCEPT [70:4275]
:POSTROUTING ACCEPT [70:4275]
#DNS
-A PREROUTING  -s 10.0.0.0/24 -d 10.0.0.1/32 -p udp -m udp --dport 53 -j REDIRECT --to-ports 5353
-A PREROUTING  -s 10.0.0.0/24 -d 10.0.0.1/32 -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 5353
#masquerade
-A POSTROUTING -s 10.0.0.0/24 -o tun0   -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 -o eno1 -j MASQUERADE
#laptop
-A PREROUTING -p tcp --dport 50100:50199 -j DNAT --to-destination 10.0.0.3
-A PREROUTING -p udp --dport 50100:50199 -j DNAT --to-destination 10.0.0.3
COMMIT
# Completed on Sun Mar 19 11:00:15 2017
